# -Automated-Mechatronic-Test-Inspection-System

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  test_report.json
config/: config.template.yaml
docs/: CLI_GUIDE.md  INDEX.md  INSTALLATION_GUIDE.md  TROUBLESHOOTING_GUIDE.md
docs/images/cli/: calibrate_output.txt  help_output.txt  status_output.txt
docs/images/testing/: integration_test_output.txt  unit_test_output.txt
docs/operator/: operator_guide.md
docs/technical/: technical_manual.md
include/: equipment_controller.h
install/docs/technical/: technical_manual.md
install/scripts/: equipment_controller.py  test_automation.py
scripts/deploy/: deploy.py
src/cpp/: equipment_controller.cpp  main.cpp
src/csharp/: EquipmentController.cs  MechatronicTestCore.csproj  MechatronicTestGUI.csproj
tests/: CMakeLists.txt
tests/integration/: integration_test.cpp
tests/unit/: simple_test.cpp
